<resources>
    <string name="app_name">NAHPIAttendance</string>

    //Headings
    <string name="heading_one">Welcome to Attendance Management System</string>
    <string name="heading_two">Get Accurate Attendance</string>
    <string name="heading_three">Keep track on your Students</string>
    <string name="heading_fourth">Create Instant Work Groups</string>

    //
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>

    //Description
    <string name="desc_one">Collect Students Attendance and create Work/Project Groups With just the click of a button</string>
    <string name="desc_two">Get Up to Date Attendance for all your students by taking pictures of them and analysing it using the facial recognition</string>
    <string name="desc_three">Know how many classes your students miss by getting a RED alert when he or she misses up to six classes</string>
    <string name="desc_fourth">Reduce the Level of Hate among Students by creating Work/Project groups instead of letting Class Cords assign them </string>
    <string name="string_skip">Skip</string>
    <string name="str_back">Back</string>
    <string name="str_next">Next</string>
    <string name="string_todo">first image</string>
    <string name="myapp_name">ATTENDANCE SYSTEM </string>
    <string name="bottom">Facial Recognition Attendance For NAHPI</string>

    //Login
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_login">Login</string>
    <string name="text_account">Don\'t have an Account?</string>
    <string name="hint_signup">SignUp</string>
    <string name="hint_google">Google</string>
    <string name="hint_facebook">Facebook</string>
    <string name="hint_password">Password</string>
    <string name="email_name">nditafonhysonn@gmail.com</string>
    <string name="suggest_pass">******</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have an Account ?</string>
    <string name="confirm_password">Confirm Password</string>

    //facebook

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="welcome">WELCOME</string>
    <string name="reset_password">Reset Password</string>
    <string name="resetting_pass">Please enter your Email Address below. A link would be sent to this email address to enable you reset your password.</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="Registration">Registration Number</string>
    <string name="computer_engineering">Computer Engineering</string>
    <string name="student_registration">STUDENT REGISTRATION</string>
    <string name="todo">TODO</string>

    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">Face Net</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>



    //////////////////////////////////////////Groups /////////////////////////////////////////////
    <string name="delete_name">Delete Name</string>
    <string name="randomize">Randomize</string>
    <string name="preset_options">Group Options</string>

    <string name="current_preset">Group:\u0020</string>
    <string name="current_preset2">Current Preset:\u0020</string>
    <string name="player_list"><u>List of Students</u></string>
    <string name="total_players">Total Students:\u0020</string>
    <string name="no_saved_presets">There are no saved Groups.</string>
    <string name="number_of_teams"># of Students…</string>
    <string name="enter_preset_name_hint">Enter Group Name… 1–26 char</string>
    <string name="enter_name_hint">Enter Student Name… 1–26 char</string>
    <string name="none">None</string>
    <string name="empty">Empty</string>

    <string name="del_name_header"><b>Delete Name</b></string>
    <string name="del_preset_header"><b>Delete Group</b></string>
    <string name="load_preset_header"><b>Load/View Group</b></string>
    <string name="view_preset_header"><b>View Group</b></string>
    <string name="randomize_header"><b>Randomize</b></string>

    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="load_preset">Load Group</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go</string>
    <string name="save">Save</string>
    <string name="randomize_again">Randomize Again</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="admob_unit_id">YOUR_AD_MOB_UNIT_ID</string>


</resources>