<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/etNumberOfTeams"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/number_of_teams"
        android:inputType="number"
        android:text="2" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNumberOfTeams"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bCancelRandomize"
            android:backgroundTint="@color/teal_700"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textSize="@dimen/rtg_text_size"/>

        <Button
            android:id="@+id/bGoRandomize"
            android:backgroundTint="@color/teal_200"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/go"
            android:textSize="@dimen/rtg_text_size"/>
    </LinearLayout>

</RelativeLayout>